err/aiml.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aiml'...
Compiling './lib/python3.5/site-packages/aiml/AimlParser.py'...
***   File "./lib/python3.5/site-packages/aiml/AimlParser.py", line 94
    raise AimlParserError, "Invalid value for xml:space attribute "+self._location()
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiml/Kernel.py'...
***   File "./lib/python3.5/site-packages/aiml/Kernel.py", line 119
    print self._respond(cmd, self._globalSessionID)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiml/PatternMgr.py'...
***   File "./lib/python3.5/site-packages/aiml/PatternMgr.py", line 55
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiml/Utils.py'...
***   File "./lib/python3.5/site-packages/aiml/Utils.py", line 9
    except: raise TypeError, "s must be a string"
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/aiml/WordSub.py'...
***   File "./lib/python3.5/site-packages/aiml/WordSub.py", line 92
    if subber.sub(inStr) == outStr: print "Test #1 PASSED"
                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/aiml/alice'...
Listing './lib/python3.5/site-packages/aiml/standard'...
Listing './lib/python3.5/site-packages/aiml-0.8.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
